client/src/components/App.css
*{
  margin: 0;
  padding: 0;
  font-family:    Helvetica, verdana, sans-serif, Tahoma
}

body{
  min-height: 100vh;
}

a{
  text-decoration: none;
}

#X{
  position: absolute;
  top: 5px;
  left: 15px;
  font-size: 200%;
  color: white;
  padding: 0 8px;
  background-color: rgba(0,0,0,0.6);
}

article, aside, footer, header, .nav, section {
  display: block;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.clearfix:before, .clearfix:after{
  content: "";
  display: table;
}
.clearfix:after{
  clear: both;
}
.clearfix{
  zoom: 1;
}

.columns-3{
  box-sizing: border-box;
  width: 33%;
  display: inline-block;
}

.credits{
  display: inline;
  height: 56px;
  padding: 10px 35px;
  font-weight: bold;
  background-color: rgb(255,150,160);
}

.nav{
  color: #fff;
  background-color: lightgreen;
  width: 100%;
  height: 56px;
  line-height: 56px;
}

.nav ul{
}

.nav-header{
  width: 95%;
  margin: 0 auto;
  position: relative;
  height: 100%;
}

.nav-header .button{
  box-sizing: border-box;
  padding: 8px 20px; 
  box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
}

.nav-header .button:hover{
  cursor: pointer;
}

.nav-header .payment-button{
  background-color: rgb(100,150,250);
  color: white;
  border: 2px solid rgb(100,150,250);
}

.nav-header .payment-button:hover{
  background-color: rgb(120,170,255);
  border: 2px solid rgb(120,170,255);
}

.nav-header .payment-button:active{
  box-shadow: none;
}


/* .nav-header ul{
  display: inline-block;
  margin-top: auto;
} */

 .nav-links li{
  display: inline-block;
  margin-right: 5px;
  margin-left: 5px;
  height: 100%;
  min-width: 80px;
  text-align: center;
}

.nav-links li a{
  transition: all;
  transition-duration: 0.5s;
  display: inline-block;
  font-weight: bolder;
  color: white;
  text-decoration: none;
  height: 100%;
  width: 100%;
  font-size: 1.2rem;

}

.nav-links li a:hover{
  background-color: rgba(0,0,0,0.2);
}

a.nav-branding{
  display: inline-block;
  color: white;
  font-weight: bold;
  font-size: 2.0rem;
  margin: auto 10px;

}

.nav-header .left{
  float: left !important;
}

.nav-header .right{
  float: right !important;
}

.modal{
  position: fixed;
  top: 0;
  width: 100vw;
  height: 100%;
  background-color: rgba(0,0,0,0.5);
}

.modal .content{
  position: absolute;
  left: 35%;
  top: 15%;
  width: 30%;
  height: 70%;
  background-color: rgb(240,240,240);
  border-radius: 2px;
  display: block;
  margin: auto auto;
  text-align: center;
  color: black;
}

.modal .content .container{
  width: 80%;
  margin: 0 auto;
}

.container{
  position: relative;
  width: 90%;
  margin: 0 auto;
}

.container-2{
  position: relative;
  width: 100%;
  margin: 0 auto;
}

.modal label{
  display: block;
  color: black;
  margin-top: 25px;
  text-align: left;
  font-weight: bold;
}

.modal input{
  padding: 12px 25px;
  width: 100%;
  border: 2px solid gray;
  border-radius: 5px;
  box-sizing: border-box;
}

.modal p{
  margin: 5px 0;
}

.modal a.button, a.button, button{
  padding: 8px 15px;
  display: inline-block;
  text-decoration: none;
  font-weight: bold;
}

.google{
  background-color: red;
  border-radius: 50px;
  color: white;
  width: 100%;
  box-sizing: border-box;
  margin: 10px 0px;
}

.facebook{
  background-color: blue;
  border-radius: 5px;
  color: white;
  width: 100%;
  box-sizing: border-box;
  margin: 10px 0px;
}

.hidden{
  display: none;
  z-index: -1;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.landing-wrapper{
  position: relative;
  /* background-image: url("http://localhost:3000/mail.png"); */
}

.landing{
  position: relative;
  background-image: url("../mail.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: 40%;
  height: 500px;
}

.landing-image{
  width: 100%;
  height: 500px;
  object-fit: cover;
  
}

.App-link {
  color: #61dafb;
  display: block;
}

.marketing{
  width: 30%;
  position: absolute;
  left: 35%;
  top: 30%;
  font-size: 2.8rem;
  text-align: center;
  color: rgb(0,150,0)
}

.marketing .product-name{
  display: inline-block;
  background-color: rgb(0,150,0);
  color: white;
  border: 2px solid rgb(0,150,0);
  border-radius: 5px;
}

.landing-wrapper .features{
  text-align: center;
}

.landing-wrapper .card{
  box-sizing: border-box;
  width: 25%;
  margin: 30px 4%;
  border: 1px solid rgba(0,0,0,0.3);
  display: inline-block;
  box-shadow: 1px 1px 3px  rgba(0,0,0,0.5), -1px -1px 3px  rgba(0,0,0,0.5);
}

.landing-wrapper .card .main-feature{
  width: 95%;
  margin: 0 auto;
  min-height:300px;
  border-bottom: 1px solid rgba(0,0,0,0.3);
}

.landing-wrapper .card .main-feature img{
  height: 100px;
  margin: 30px 0;
}

.landing-wrapper .card .feature-name{
  min-height: 80px;
}

.landing-wrapper .card .feature-name .secondary-text{
  padding-top: 30px;
}

.landing-wrapper .card .primary-text{
  font-size: 1.3rem;
  margin-bottom: 20px;
}

.landing-wrapper .card .primary-text, .landing-wrapper .card .secondary-text{
  color: rgba(0,0,0,0.3);
  text-align: center;
}

.footer-wrapper{
  position: relative;
  background-color: rgb(110,230,110);
  border-top: 8px solid rgb(100,150,250);
}

.footer{
  color: white;
  font-weight: bold
}

ul li{
  list-style-type: none;
}

.footer li{
  margin: 10px 0;
}

.category{
  margin: 10px 0;
}

.copyright{
  display: block;
  text-align: center;
  margin-top: 40px;
  padding: 40px 0;
  color: white;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

